--- a/OrganizadorReuniao/packages.config
+++ b/OrganizadorReuniao/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.5" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="jquery.datatables" version="1.10.7" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
