--- a/OrganizadorReuniao/OrganizadorReuniao.csproj
+++ b/OrganizadorReuniao/OrganizadorReuniao.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ActivitiesController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\BatchCommandController.cs" />
     <Compile Include="Controllers\CallingController.cs" />
     <Compile Include="Controllers\FrequencyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -162,6 +163,7 @@
     <Compile Include="Models\AccessViewModel.cs" />
     <Compile Include="Models\Activity.cs" />
     <Compile Include="Models\Admin.cs" />
+    <Compile Include="Models\BatchCommand.cs" />
     <Compile Include="Models\Calling.cs" />
     <Compile Include="Models\ActivityViewModel.cs" />
     <Compile Include="Models\CallingViewModel.cs" />
@@ -427,6 +429,8 @@
     <Content Include="Views\AccessArea\Index.cshtml" />
     <Content Include="Views\AccessArea\New.cshtml" />
     <Content Include="Views\AccessArea\Feedback.cshtml" />
+    <Content Include="Views\BatchCommand\Index.cshtml" />
+    <Content Include="Views\BatchCommand\Success.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
